src/snapshots/bitcan__tests__datafile_append_read.snap
---
source: src/lib.rs
expression: key_entry
---
file_id: file_id
entry_offset: 0
value_size: 6
offset: 24
timestamp: ts
